--- a/work_blog/requirements.txt
+++ b/work_blog/requirements.txt
@@ -8,7 +8,9 @@ cryptography==2.3.1
 defusedxml==0.5.0
 diff-match-patch==20121119
 Django==2.1.3
-django-ckeditor==5.6.1
+django-appconf==1.0.3
+django-ckeditor==5.7.0
+django-compressor==2.2
 django-crispy-forms==1.7.2
 django-debug-toolbar==1.11
 django-filter==2.0.0
@@ -46,9 +48,11 @@ python3-openid==3.1.0
 pytz==2018.5
 PyYAML==3.13
 qrcode==6.1
+rcssmin==1.0.6
 redis==3.2.0
 requests==2.21.0
 requests-oauthlib==1.2.0
+rjsmin==1.0.12
 six==1.11.0
 social-auth-app-django==3.1.0
 social-auth-core==3.1.0
