--- a/work_blog/requirements.txt
+++ b/work_blog/requirements.txt
@@ -1,51 +1,28 @@
 asn1crypto==0.24.0
-astroid==2.0.4
 bootstrap-admin==0.4.0
 certifi==2018.11.29
 cffi==1.11.5
 chardet==3.0.4
-cryptography==2.3.1
+cryptography==2.4.2
 defusedxml==0.5.0
-diff-match-patch==20121119
 Django==2.1.3
 django-appconf==1.0.3
-django-ckeditor==5.7.0
-django-crispy-forms==1.7.2
-django-debug-toolbar==1.11
-django-filter==2.0.0
-django-formtools==2.1
+django-ckeditor==5.6.1
+django-compressor==2.2
 django-hosts==3.0
-django-import-export==1.1.0
 django-js-asset==1.1.0
 django-redis==4.10.0
-django-reversion==3.0.1
 djangorestframework==3.9.0
-et-xmlfile==1.0.1
-flake8==3.6.0
-future==0.17.0
-httplib2==0.11.3
 idna==2.7
-isort==4.3.4
-jdcal==1.4
-lazy-object-proxy==1.3.1
-Markdown==3.0.1
-mccabe==0.6.1
+meld3==1.0.2
 mysqlclient==1.3.13
 oauthlib==3.0.1
-odfpy==1.3.6
-openpyxl==2.5.9
 Pillow==5.3.0
-pkg-resources==0.0.0
-pycodestyle==2.4.0
 pycparser==2.19
-pyflakes==2.0.0
 PyJWT==1.7.1
-pylint==2.1.1
 PyMySQL==0.9.2
-python-memcached==1.59
 python3-openid==3.1.0
-pytz==2018.5
-PyYAML==3.13
+pytz==2018.7
 qrcode==6.1
 rcssmin==1.0.6
 redis==3.2.0
@@ -55,12 +32,4 @@ rjsmin==1.0.12
 six==1.11.0
 social-auth-app-django==3.1.0
 social-auth-core==3.1.0
-sqlparse==0.3.0
-tablib==0.12.1
-typed-ast==1.1.0
-unicodecsv==0.14.1
 urllib3==1.24.1
-wrapt==1.10.11
-xlrd==1.1.0
-XlsxWriter==1.1.2
-xlwt==1.3.0
