--- a/work_blog/requirements.txt
+++ b/work_blog/requirements.txt
@@ -16,13 +16,18 @@ django-simpleui==3.3
 djangorestframework==3.9.0
 entrypoints==0.3
 flake8==3.7.7
+greenlet==0.4.15
 idna==2.7
 isort==4.3.20
+jedi==0.15.1
+jieba==0.39
 lazy-object-proxy==1.4.1
 mccabe==0.6.1
 meld3==1.0.2
+msgpack==0.6.2
 mysqlclient==1.3.13
 oauthlib==3.0.1
+parso==0.5.1
 Pillow==5.3.0
 pycodestyle==2.5.0
 pycparser==2.19
@@ -30,6 +35,7 @@ pyflakes==2.1.1
 PyJWT==1.7.1
 pylint==2.3.1
 PyMySQL==0.9.2
+pynvim==0.3.2
 python3-openid==3.1.0
 pytz==2018.7
 qrcode==6.1
@@ -43,4 +49,5 @@ social-auth-app-django==3.1.0
 social-auth-core==3.1.0
 typed-ast==1.4.0
 urllib3==1.24.1
+Whoosh==2.7.4
 wrapt==1.11.2
